--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
+	"express": "^4.14.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
