--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Boilerplate following Airbnb's JavaScript (ES6) Style Guide.",
   "scripts": {
     "precommit": "npm test && npm run build",
-    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d && node server.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require ignore-styles",
     "test:watch": "npm test -- --watch",
     "test:coverage": "nyc npm test",
