--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "React Boilerplate following Airbnb's JavaScript (ES6) Style Guide.",
   "scripts": {
     "precommit": "npm test && npm run build",
-    "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server.js",
+    "start": "./node_modules/.bin/webpack-dev-server --inline --content-base build/ -d",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --require ignore-styles",
     "test:watch": "npm test -- --watch",
     "test:coverage": "nyc npm test",
-    "build": "./node_modules/.bin/webpack -p",
+    "build": "./node_modules/.bin/webpack -p"
   },
   "nyc": {
     "reporter": [
@@ -57,7 +57,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
-	"express": "^4.14.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
